[package]
name = "seed"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Parsing
zip = "2"
serde_json = "1"
